# llm_topic_modelling

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cli_topics.py  entrypoint.sh  lambda_entrypoint.py  load_dynamo_logs.py  load_s3_logs.py  pyproject.toml  requirements.txt  requirements_aws.txt  requirements_cpu.txt  requirements_cpu_win.txt  requirements_gpu.txt  requirements_lightweight.txt  requirements_no_local.txt  windows_install_llama-cpp-python.txt
.github/workflows/: ci.yml  simple-test.yml  sync_to_hf.yml
cdk/: app.py  cdk.json.example  cdk_appregistry.py  cdk_cloudfront_headers.py  cdk_config.py  cdk_functions.py  cdk_install.py  cdk_post_deploy.py  cdk_stack.py  check_resources.py  example_headless_env_file.env  lambda_load_dynamo_logs.py  post_cdk_build_quickstart.py  requirements.txt
cdk/config/: app_config.env.example
cdk/config/headless_s3_seed/input/config/: example_headless_env_file.env
cdk/config/lambda/: lambda_function.py
cdk/docs/: express_pi_service_connect_spike.md
cdk/lambda_dynamo_logs_export/: lambda_function.py
cdk/lambda_elbv2_listener_rule_upsert/: lambda_function.py
cdk/test/: test_cdk_install.py  test_cdk_post_deploy.py  test_cdk_synth_express.py  test_cloudfront_csp.py  test_codebuild_public_github_source.py  test_delete_protection_config.py  test_dynamo_usage_log_export.py  test_ecs_vpc_endpoints.py  test_elbv2_listener_rule_upsert.py  test_ensure_codebuild_public_github.py  test_execution_role_kms_policy.py  test_express_app_config_env.py  test_express_pi.py  test_globally_unique_names.py  test_headless_app_defaults_env.py  test_headless_output_notifications.py  test_iam_policy_files.py  test_pi_agent_ecs_synth.py  test_pi_alb_routing.py  test_public_subnet_igw.py  test_s3_batch_lambda_handler.py  test_s3_batch_lambda_synth.py  test_secret_arn_grants.py  test_service_connect_config.py
example_data/: case_note_headers_specific.csv  combined_case_notes.csv  combined_case_notes_col_Case_Note_Gemma_3_4B_structured_summaries.xlsx  combined_case_notes_col_Case_Note_Gemma_3_4B_topic_analysis.xlsx  combined_case_notes_col_Case_Note_Gemma_3_4B_topic_analysis_grouped.xlsx  dummy_consultation_r_col_Response_text_Gemma_3_4B_topic_analysis.xlsx  dummy_consultation_r_col_Response_text_Gemma_3_4B_topic_analysis_zero_shot.xlsx  dummy_consultation_r_zero_shot_col_Response_text_Qwen_3_4B_topic_analysis.xlsx  dummy_consultation_response.csv  dummy_consultation_response_themes.csv
intros/: intro.txt
test/: README.md  __init__.py  mock_inference_server.py  mock_llm_calls.py  run_tests.py  test.py  test_gui_only.py  test_topic_discovery.py
tools/: auth.py  aws_functions.py  chatfuncs.py  combine_sheets_into_xlsx.py  config.py  custom_csvlogger.py  dedup_summaries.py  example_table_outputs.py  helper_functions.py  llm_api_call.py  llm_funcs.py  prompts.py  verify_titles.py  view_logs.py
